# CameraSDK

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
inc/: srt_data.hpp  ts_muxer.h  utils.h  wsrt_api.h  wsrt_common.h
samples/: CMakeLists.txt  ingenic_vi_venc_test.cpp  rkmedia_vi_venc_test.c
src/: CMakeLists.txt  srt_data.cpp  ts_muxer.c  utils.c  wsrt_api.cpp
